--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,7 @@
 <div class="row">
-  <div class="col-xs">
-  <div class="col-sm-offset-2 col-sm-4">
-  <div class="col-lg-offset-3 col-lg-6">
-
+  <div class="col-xs-0" "col-sm-offset-2 col-sm-4" "col-lg-offset-3 col-lg-6">
+  </div>
+  
     <%= form_for(task) do |f| %>
       <% if task.errors.any? %>
         <div class="alert alert-warning">
@@ -16,17 +15,15 @@
   
       <div class="form-group">
         <%= f.label :status, 'ステータス' %>
-        <%= f.text_field :status %>
+        <%= f.text_field :status, class: 'form-control' %>
       </div>
   
       <div class="form-group">
         <%= f.label :content, 'タスク' %>
-        <%= f.text_field :content %>
+        <%= f.text_field :content, class: 'form-control' %>
       </div>
 
       <%= f.submit '投稿', class: 'btn btn-primary' %>
     <% end %>
-  </div>
-  </div>
-  </div>
+  
 </div>
